<resources>
    <string name="app_name">Baka Ero</string>
    <string name="stupid_slogan">you dont know how you stupid you are!</string>
    <string name="prove">PROVE</string>
    <string name="ladder">Ladder board</string>
    <string name="help">Help</string>
    <string name="ten">10</string>
    <string name="operand">19</string>
    <string name="operator">+</string>
    <string name="equal_sym">=</string>
    <string name="question_mak">\?</string>
    <string name="your_score">Your score:</string>
    <string name="zero">0</string>
    <string name="max_time">7</string>
    <string name="username">Stupid Name</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="fine">OK! Fine</string>
    <string name="who_played_that_game">WHO PLAYED THAT GAME ?</string>
    <string name="i_know_that_someone_want_to_record_their_stupid_level">someone want to record their stupid things</string>
    <string name="delete_all_stupid_things">Delete all Stupid things</string>
    <string name="no_records">No stupid things here</string>
    <string name="let_me_know_about_you_n_stupid_one">Let me know about you\n Stupid one!</string>
    <string name="new_stupid_name">New stupid name</string>

</resources>
