<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_sea">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="176dp"
        android:layout_height="81dp"
        android:background="@mipmap/stupid_cloud"
        android:scaleType="centerInside"
        android:layout_marginTop="100dp"
        />

    <TextView
        android:text="@string/stupid_slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:textColor="@color/midnight_blue"
        android:textSize="13sp"
        android:fontFamily="casual"
        android:textStyle="bold"/>

    <Button
        android:text="@string/prove"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnPlay"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/cloud_button"
        android:textColor="@color/midnight_blue"/>

    <Button
        android:text="@string/ladder"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnLadder"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/cloud_button"
        android:textColor="@color/midnight_blue"/>

    <Button
        android:text="@string/help"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnHelp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/cloud_button"
        android:textColor="@color/midnight_blue"/>

</LinearLayout>