<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:background="@color/clouds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <ImageView
            android:src="@mipmap/stupid"
            android:layout_width="274dp"
            android:layout_height="64dp"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:background="@color/emerald"
            android:contentDescription="@string/app_name" />
        <TextView
            android:text="Let me know about you\n Stupid one!"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp" />
        <EditText
            android:id="@+id/edUsername"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/username" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:stretchColumns="*">
            <TableRow
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal">

                <Button
                    android:text="@string/done"
                    android:textColor="@color/clouds"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/emerald_button"
                    android:id="@+id/btnRegist"
                    android:layout_column="0"/>

                <Button
                    android:text="@string/cancel"
                    android:textColor="@color/clouds"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/emerald_button"
                    android:id="@+id/btnCancelRegist"
                    android:layout_column="1"/>

            </TableRow>
        </TableLayout>

    </LinearLayout>


</LinearLayout>