<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_gameplay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lincantek.glee.bakaero.GameplayActivity"
    android:background="@color/green_sea">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:max="100"
                android:progress="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <!--Expression-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal">


            <TextView
                android:text="@string/operand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txviewOperand1"
                android:fontFamily="casual"
                android:textSize="50sp"
                android:textColor="@color/clouds"/>

            <TextView
                android:text="@string/operator"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txviewOperator"
                android:fontFamily="casual"
                android:textSize="50sp"
                android:textColor="@color/clouds"
                android:layout_weight="1" />


            <TextView
                android:text="@string/operand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txviewOperand2"
                android:fontFamily="casual"
                android:textSize="50sp"
                android:textColor="@color/clouds"/>


            <TextView
                android:text="@string/equal_sym"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:textSize="50sp"
                android:textColor="@color/clouds"/>

            <TextView
                android:text="@string/question_mak"
                android:id="@+id/txAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:textSize="50sp"
                android:textColor="@color/clouds"/>
        </LinearLayout>

        <!--Keypad-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            >
            <!--From 1 to 3-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp">

                <Button
                    android:text="1"
                    android:id="@+id/num1"
                    android:fontFamily="casual" android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/midnight_blue"
                    android:background="@drawable/cloud_button"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="start"/>

                <Button
                    android:text="2"
                    android:id="@+id/num2"
                    android:fontFamily="casual" android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/midnight_blue"
                    android:background="@drawable/cloud_button"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_gravity="center"/>

                <Button
                    android:text="3"
                    android:id="@+id/num3"
                    android:fontFamily="casual" android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/midnight_blue"
                    android:background="@drawable/cloud_button"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="end"/>

            </LinearLayout>

            <!--From 4 to 6-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp">

                <Button
                    android:text="4"
                    android:id="@+id/num4"
                    android:fontFamily="casual" android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/midnight_blue"
                    android:background="@drawable/cloud_button"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="start"/>

                <Button
                    android:text="5"
                    android:id="@+id/num5"
                    android:fontFamily="casual" android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/midnight_blue"
                    android:background="@drawable/cloud_button"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_gravity="center"/>

                <Button
                    android:text="6"
                    android:id="@+id/num6"
                    android:fontFamily="casual" android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/midnight_blue"
                    android:background="@drawable/cloud_button"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="end"/>

            </LinearLayout>

            <!--From 7 to 9-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp">

                <Button
                    android:text="7"
                    android:id="@+id/num7"
                    android:fontFamily="casual" android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/midnight_blue"
                    android:background="@drawable/cloud_button"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="start"/>

                <Button
                    android:text="8"
                    android:id="@+id/num8"
                    android:fontFamily="casual" android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/midnight_blue"
                    android:background="@drawable/cloud_button"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_gravity="center"/>

                <Button
                    android:text="9"
                    android:id="@+id/num9"
                    android:fontFamily="casual" android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/midnight_blue"
                    android:background="@drawable/cloud_button"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="end"/>

            </LinearLayout>

            <!--Line 0-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp">

                <Button
                    android:text="Clear"

                    android:id="@+id/clear"
                    android:fontFamily="casual" android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/midnight_blue"
                    android:background="@drawable/cloud_button"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="start"/>

                <Button
                    android:text="0"
                    android:id="@+id/num0"
                    android:fontFamily="casual" android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/midnight_blue"
                    android:background="@drawable/cloud_button"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_gravity="center"/>

                <Button
                    android:text="Back"

                    android:id="@+id/back"
                    android:fontFamily="casual" android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/midnight_blue"
                    android:background="@drawable/cloud_button"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="end"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:weightSum="1">
            <TextView
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:text="@string/your_score"
                android:textStyle="bold"
                android:textSize="14sp"
                android:fontFamily="casual"
                android:layout_gravity="start|bottom"
                android:gravity="end|bottom"
                android:textColor="@color/midnight_blue"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textStyle="bold"
                android:textSize="26sp"
                android:fontFamily="casual"
                android:layout_gravity="end|bottom"
                android:gravity="end|bottom"
                android:textColor="@color/pumpkin"
                android:id="@+id/txScore" />


        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
